--- a/MongoBase/MongoBase.csproj
+++ b/MongoBase/MongoBase.csproj
@@ -3,5 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+ <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
+  </ItemGroup>
 </Project>
