--- a/MongoBase/MongoBase.csproj
+++ b/MongoBase/MongoBase.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5</TargetFramework>
   </PropertyGroup>
  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
