--- a/MongoBase/MongoBase.csproj
+++ b/MongoBase/MongoBase.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+   <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.1" />
   </ItemGroup>
 </Project>
