--- a/Sample/Server/appsettings.json
+++ b/Sample/Server/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost",
-    "DatabaseName": "test"
+    "ConnectionString": "mongodb://admin:admin1@localhost",
+    "DatabaseName": "suplly"
   },
   "AllowedHosts": "*"
 }
