--- a/deployment/mongo.conf
+++ b/deployment/mongo.conf
@@ -12,6 +12,6 @@ replication:
    replSetName: "sample"
 setParameter:
    enableLocalhostAuthBypass: true
-security:
-   authorization: disabled
-   keyFile: "./mongo.key"
+# security:
+#    authorization: disabled
+#    keyFile: "./mongo.key"
