--- a/Sample/Sample.Domain.DataAdapter/Sample.Domain.DataAdapter.csproj
+++ b/Sample/Sample.Domain.DataAdapter/Sample.Domain.DataAdapter.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="data\ProductColorSize.sample.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="data\sample.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
