--- a/Sample/Server/appsettings.Development.json
+++ b/Sample/Server/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://192.168.2.210",
     "DatabaseName": "DomainProduct"
   }
 }
