--- a/Sample/Sample.Domain/Sample.Domain.csproj
+++ b/Sample/Sample.Domain/Sample.Domain.csproj
@@ -14,4 +14,8 @@
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
   </Content> 
 </ItemGroup>
+  <ItemGroup>
+    <None Remove="db\ProductColorSize-Brand-Gender-Line.index.json" />
+    <None Remove="db\ProductColorSize-MainProductGroup.index.json" />
+  </ItemGroup>
  </Project>
