--- a/Sample/Server/appsettings.json
+++ b/Sample/Server/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://192.168.2.210",
+    "ConnectionString": "mongodb://localhost",
     "DatabaseName": "DomainProduct"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Urls": "http://*:5000"
 }
