--- a/Sample/Sample.Domain/Sample.Domain.csproj
+++ b/Sample/Sample.Domain/Sample.Domain.csproj
@@ -18,4 +18,7 @@
     <None Remove="db\ProductColorSize-Brand-Gender-Line.index.json" />
     <None Remove="db\ProductColorSize-MainProductGroup.index.json" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
  </Project>
