--- a/Sample/Server/appsettings.json
+++ b/Sample/Server/appsettings.json
@@ -7,9 +7,8 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://admin:admin@db.mongo-dev",
     "DatabaseName": "DomainProduct"
   },
-  "AllowedHosts": "*",
-  "Urls": "http://*:5000"
+  "AllowedHosts": "*"
 }
