--- a/Sample/Server/appsettings.Development.json
+++ b/Sample/Server/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://admin:admin@db.mongo-dev",
     "DatabaseName": "DomainProduct"
-  }
+  },
+  "AllowedHosts": "*"
 }
