--- a/deployment/mongo.conf
+++ b/deployment/mongo.conf
@@ -9,9 +9,9 @@ net:
    port: 27017
 
 replication:
-   replSetName: "sample"
+   replSetName: "SupplyProducts"
 setParameter:
    enableLocalhostAuthBypass: true
-# security:
-#    authorization: disabled
-#    keyFile: "./mongo.key"
+security:
+    authorization: enabled
+    keyFile: "./mongo.key"
