--- a/Sample/Server/appsettings.json
+++ b/Sample/Server/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://admin:admin@localhost",
+    "ConnectionString": "mongodb://admin:admin@win10:27017,vehilce:27017/?replicaSet=SupplyProducts",
     "DatabaseName": "DomainProduct"
   },
   "AllowedHosts": "*"
 }
+
