--- a/Sample/Server/appsettings.Development.json
+++ b/Sample/Server/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://admin:admin@win10:27017,vehilce:27017/?replicaSet=SupplyProducts",
+    "ConnectionString": "mongodb://admin:admin@vehicle:27017",
     "DatabaseName": "DomainProduct"
   },
   "AllowedHosts": "*"
