--- a/MongoBase.Test/MongoBase.Test.csproj
+++ b/MongoBase.Test/MongoBase.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5</TargetFramework>
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
@@ -15,6 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MongoBase\MongoBase.csproj" />
+    <ProjectReference Include="..\Sample\Sample.Domain.DataAdapter\Sample.Domain.DataAdapter.csproj" />
+    <ProjectReference Include="..\Sample\Sample.Domain\Sample.Domain.csproj" />
   </ItemGroup>
 
 </Project>
