--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,3 +25,12 @@ jobs:
       
     - name: Pack
       run: dotnet pack --no-restore
+    - name: Publish NuGet
+        
+      uses: brandedoutcast/publish-nuget@v2.5.5
+      with:
+        # Filepath of the project to be packaged, relative to root of repository
+        PROJECT_FILE_PATH: RestMongo/RestMongo.csproj
+        # NuGet package id, used for version detection & defaults to project name
+        NUGET_KEY: ${{ secrets.NUGET_KEY }}
+          
