--- a/RestMongo/RestMongo.csproj
+++ b/RestMongo/RestMongo.csproj
@@ -6,11 +6,14 @@
     <Authors>Michael Koch</Authors>
     <Company>Hier könnte Ihr Name stehen</Company>
   </PropertyGroup>
+
  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.5.7" />
-    <PackageReference Include="MongoDB.Driver" Version="2.12.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="Moq" Version="4.16.1" />
-   <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-   <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.1" />
+   <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
+   <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.1.3" />
  </ItemGroup>
+
 </Project>
