--- a/RestMongo/RestMongo.csproj
+++ b/RestMongo/RestMongo.csproj
@@ -2,9 +2,9 @@
 <PropertyGroup>
     <TargetFramework>net5</TargetFramework>
     <PackageId>RestMongo</PackageId>
-    <Version>0.0.4</Version>
+    <Version>0.0.5</Version>
     <Authors>Michael Koch</Authors>
-    <Company>Hier könnte Ihr Name stehen</Company>
+    <Company>it could be  your name</Company>
 </PropertyGroup>
 
  <ItemGroup>
