--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
       
-    - name: Test
-      run: dotnet test --verbosity normal
+    #- name: Test
+    #  run: dotnet test --verbosity normal
 
     - name: Build
       run: dotnet build --no-restore
