--- a/RestMongo.Data.Abstractions/RestMongo.Data.Abstractions.csproj
+++ b/RestMongo.Data.Abstractions/RestMongo.Data.Abstractions.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<PackageId>RestMongo.Data.Abstractions</PackageId>
+		<Version>0.0.1</Version>
+		<Authors>Multiple authors (see github repo)</Authors>
+		<Company>it could be  your name</Company>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MongoDB.Bson" Version="2.12.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MongoDB.Bson" Version="2.12.3" />
+	</ItemGroup>
 
 </Project>
