--- a/RestMongo.Web.Abstractions/RestMongo.Web.Abstractions.csproj
+++ b/RestMongo.Web.Abstractions/RestMongo.Web.Abstractions.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<PackageId>RestMongo.Data.Abstractions</PackageId>
+		<Version>0.0.1</Version>
+		<Authors>Multiple authors (see github repo)</Authors>
+		<Company>it could be  your name</Company>
+	</PropertyGroup>
 
 </Project>
