feat: decouple Web from Data

--- a/RestMongo.Data.Abstractions/RestMongo.Data.Abstractions.csproj
+++ b/RestMongo.Data.Abstractions/RestMongo.Data.Abstractions.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MongoDB.Bson" Version="2.12.3" />
+		<PackageReference Include="MongoDB.Driver" Version="2.12.3" />
 	</ItemGroup>
 
 </Project>
