--- a/RestMongo.Extensions/RestMongo.Extensions.csproj
+++ b/RestMongo.Extensions/RestMongo.Extensions.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\RestMongo.Data\RestMongo.Data.csproj" />
 		<ProjectReference Include="..\RestMongo.Web\RestMongo.Web.csproj" />
 	</ItemGroup>
 
