--- a/RestMongo.Test/RestMongo.Test.csproj
+++ b/RestMongo.Test/RestMongo.Test.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RestMongo.Data\RestMongo.Data.csproj" />
     <ProjectReference Include="..\RestMongo.Extensions\RestMongo.Extensions.csproj" />
   </ItemGroup>
 
