feat: added domain layer

--- a/RestMongo.Extensions/RestMongo.Extensions.csproj
+++ b/RestMongo.Extensions/RestMongo.Extensions.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\RestMongo.Data\RestMongo.Data.csproj" />
+		<ProjectReference Include="..\RestMongo.Domain\RestMongo.Domain.csproj" />
 		<ProjectReference Include="..\RestMongo.Web\RestMongo.Web.csproj" />
 	</ItemGroup>
 
